# cs6210-project2

./: CMakeLists.txt  combined_barrier.c  combined_barrier.h  helpers.c  helpers.h  mpi_barriers.h  mpi_dissemination_barrier.c  mpi_dissemination_barrier.h  mpi_mcs_barrier.c  mpi_mcs_barrier.h  mpi_tournament_barrier.c  mpi_tournament_barrier.h  omp_centralized_barrier.c  omp_centralized_barrier.h  omp_dissemination_barrier.c  omp_dissemination_barrier.h  omp_mcs_barrier.c  omp_mcs_barrier.h  omp_tournament_barrier.c  omp_tournament_barrier.h  omp_tree_barrier.c  omp_tree_barrier.h
tests/: Makefile  combined_test0.c  combined_test0_2nodes.sh  combined_test0_3nodes.sh  combined_test0_4nodes.sh  combined_test0_5nodes.sh  combined_test0_6nodes.sh  combined_test0_7nodes.sh  combined_test0_8nodes.sh  mpi_test0.c  mpi_test0_4nodes.sh  mpi_test1.c  omp_test0.c  omp_test1.c
timing/: Makefile  combined_barrier_timing2.c  combined_timing2_2nodes.sh  combined_timing2_4nodes.sh  combined_timing2_6nodes.sh  combined_timing2_8nodes.sh  mpi_barrier_timing.c  mpi_barrier_timing2.c  mpi_timing2_2nodes.sh  omp_2threads.sh  omp_3threads.sh  omp_4threads.sh  omp_5threads.sh  omp_6threads.sh  omp_7threads.sh  omp_8threads.sh  omp_barrier_timing.c  omp_barrier_timing2.c  timer.h
